[#3517] refactor(test): pass real ProcessingContext to JpaTransactionalExecutorProvider in JPA DLQ tests
Override toProcessingContext() in JpaSequencedDeadLetterQueueTest to enrich the
StubProcessingContext with a Supplier<EntityManagerExecutor> under SUPPLIER_KEY,
exercising the production code path where JpaTransactionalExecutorProvider extracts
the executor from the ProcessingContext.

Replace the lambda-based TransactionalExecutorProvider with an anonymous subclass of
JpaTransactionalExecutorProvider that overrides getTransactionalExecutor(). When a
ProcessingContext is available, it delegates to super (the real production logic).
When the context is null, it falls back to the test's single EntityManager.

The fallback is necessary because the test uses rollback-based isolation: a single
EntityManager with a transaction opened in @BeforeEach and rolled back in @AfterEach.
This transaction doubles as the transaction management that EntityManagerExecutor
assumes is already active (it does not begin/commit on its own — in production, the
real ProcessingContext lifecycle handles that). Without the fallback, the null-context
path in JpaTransactionalExecutorProvider creates a second EntityManager with its own
transaction, which blocks on table locks held by the test's transaction while the test
thread blocks waiting for the operation to complete — a classic deadlock.

Also fix enqueuedLetterWithoutAggregateResourcesPreservesTrackingToken to use
toProcessingContext() instead of calling StubProcessingContext.fromContext() directly,
which was missing the SUPPLIER_KEY resource and failing with IllegalStateException.

Make toProcessingContext() overridable in SequencedDeadLetterQueueTest and override
it in JdbcSequencedDeadLetterQueueTest to enrich the StubProcessingContext with a
Supplier<ConnectionExecutor> under SUPPLIER_KEY. This exercises the production code
path where JdbcTransactionalExecutorProvider extracts the executor from the
ProcessingContext, instead of bypas