@@ -16,22 +16,22 @@
 
 package org.axonframework.messaging.eventhandling.deadletter.jdbc;
 
+import jakarta.annotation.Nonnull;
 import org.axonframework.common.IdentifierFactory;
 import org.axonframework.common.jdbc.JdbcException;
-import org.axonframework.common.tx.TransactionalExecutor;
+import org.axonframework.messaging.core.unitofwork.transaction.TransactionalExecutorProvider;
 import org.axonframework.messaging.core.unitofwork.transaction.jdbc.JdbcTransactionalExecutorProvider;
 import org.hsqldb.jdbc.JDBCDataSource;
 import org.junit.jupiter.api.*;
 
+import javax.sql.DataSource;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.StreamSupport;
-import javax.sql.DataSource;
 
 import static org.axonframework.common.FutureUtils.joinAndUnwrap;
 import static org.axonframework.common.jdbc.JdbcUtils.*;
@@ -45,22 +45,35 @@ import static org.junit.jupiter.api.Assertions.*;
 @SuppressWarnings({"SqlDialectInspection", "SqlNoDataSourceInspection"})
 class PagingJdbcIterableTest {
 
-    private DataSource dataSource;
-    // Sentinel connection to keep HSQLDB in-memory database alive across operations
-    private Connection sentinelConnection;
-    private TransactionalExecutor<Connection> executor;
+    private TransactionalExecutorProvider<Connection> executorProvider;
     private PagingJdbcIterable<String> testSubject;
 
     @BeforeEach
-    void setUp() throws SQLException {
-        dataSource = dataSource();
-        sentinelConnection = dataSource.getConnection();
-        executor = new JdbcTransactionalExecutorProvider(dataSource).getTransactionalExecutor(null);
+    void setUp() {
+        var dataSource = dataSource();
+        recreateTestTable(dataSource);
+        executorProvider = new JdbcTransactionalExecutorProvider(dataSource);
+        testSubject = new PagingJdbcIterable<>(
+                executorProvider.getTransactionalExecutor(null),
+                (conn, offset, maxSize) -> {
+                    String sql = "SELECT * FROM test_table WHERE idIndex >=? LIMIT ?";
+                    PreparedStatement statement = conn.prepareStatement(sql);
+                    statement.setLong(1, offset);
+                    statement.setLong(2, maxSize);
+                    return statement;
+                },
+                10,
+                resultSet -> resultSet.getString("identifier"),
+                RuntimeException::new
+        );
+    }
 
-        // Use a direct connection for DDL setup to avoid HSQLDB issues with setAutoCommit(false) + DDL
-        try (Connection setupConnection = dataSource.getConnection()) {
+    private static void recreateTestTable(DataSource dataSource) {
+        Connection connection = null;
+        try {
+            connection = dataSource.getConnection();
             executeUpdates(
-                    setupConnection,
+                    connection,
                     e -> {
                         throw new JdbcException("Unable to prepare test_table", e);
                     },
@@ -72,36 +85,20 @@ class PagingJdbcIterableTest {
                                     + ")"
                     )
             );
+        } catch (SQLException e) {
+            throw new IllegalStateException("Unable to retrieve a Connection to prepare the test_table", e);
+        } finally {
+            closeQuietly(connection);
         }
-
-        testSubject = new PagingJdbcIterable<>(
-                executor,
-                (connection, offset, maxSize) -> {
-                    String sql = "SELECT * FROM test_table WHERE idIndex >=? LIMIT ?";
-                    PreparedStatement statement = connection.prepareStatement(sql);
-                    statement.setLong(1, offset);
-                    statement.setLong(2, maxSize);
-                    return statement;
-                },
-                10,
-                resultSet -> resultSet.getString("identifier"),
-                RuntimeException::new
-        );
     }
 
-    private DataSource dataSource() {
+    @Nonnull
+    private static JDBCDataSource dataSource() {
         JDBCDataSource dataSource = new JDBCDataSource();
-        dataSource.setUrl("jdbc:hsqldb:mem:pagingtest");
+        dataSource.setUrl("jdbc:hsqldb:mem:" + PagingJdbcIterableTest.class.getSimpleName());
         dataSource.setUser("sa");
         dataSource.setPassword("");
         return dataSource;
-    }
-
-    @AfterEach
-    void tearDown() {
-        if (sentinelConnection != null) {
-            closeQuietly(sentinelConnection);
-        }
     }
 
     @Test
@@ -110,7 +107,7 @@ class PagingJdbcIterableTest {
         addEntryAt(testId, 1);
 
         List<String> result = StreamSupport.stream(testSubject.spliterator(), false)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
         assertEquals(1, result.size());
         assertEquals(testId, result.get(0));
@@ -120,34 +117,32 @@ class PagingJdbcIterableTest {
     void queriesMultiplePages() {
         List<String> expectedIds = IntStream.range(0, 102)
                                             .mapToObj(String::valueOf)
-                                            .collect(Collectors.toList());
+                                            .toList();
         expectedIds.forEach(expectedId -> addEntryAt(expectedId, Long.parseLong(expectedId)));
 
         List<String> result = StreamSupport.stream(testSubject.spliterator(), false)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
         assertEquals(expectedIds.size(), result.size());
         expectedIds.forEach(resultId -> assertTrue(result.contains(resultId)));
     }
 
-    private void addEntryAt(String id, long index) {
-        joinAndUnwrap(executor.accept(connection -> {
-            executeUpdate(
-                    connection,
-                    c -> {
-                        String sql = "INSERT INTO test_table (identifier, idIndex) VALUES(?,?)";
-                        PreparedStatement statement = c.prepareStatement(sql);
-                        statement.setString(1, id);
-                        statement.setLong(2, index);
-                        return statement;
-                    },
-                    e -> new JdbcException("Unable to insert entry [" + id + "] at index [" + index + "]", e)
-            );
-        }));
-    }
-
     @Test
     void throwsExceptionWhenNoItemPresent() {
         assertThrows(NoSuchElementException.class, testSubject.iterator()::next);
+    }
+
+    private void addEntryAt(String id, long index) {
+        joinAndUnwrap(executorProvider.getTransactionalExecutor(null).accept(conn -> executeUpdate(
+                conn,
+                c -> {
+                    String sql = "INSERT INTO test_table (identifier, idIndex) VALUES(?,?)";
+                    PreparedStatement statement = c.prepareStatement(sql);
+                    statement.setString(1, id);
+                    statement.setLong(2, index);
+                    return statement;
+                },
+                e -> new JdbcException("Unable to insert entry [" + id + "] at index [" + index + "]", e)
+        )));
     }
 }
